# naf_calc

./: .gitignore  Cargo.toml  README.md
src/: calc.rs  history.rs  ir.rs  ircalc.rs  main.rs  strat.rs
src/ir/: flags.rs  mod.rs
