[package]
name = "naf_calc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
libmath = "0.2.1"
r2d2_sqlite = "0.19.0"
r2d2 = "0.8.9"
# libsqlite3-sys = "0.23.2"
rusqlite = { version = "0.26.3", features = ["bundled"] }
yaml-rust = "0.4"
dirs-next = "2.0.0"
#druid = "0.7.0"
iracing-telem = { version= "0.1", path = "../iracing-telem" }
serde_json = "1.0.79"
serde = { version = "1.0", features = ["derive"] }
regex = "1"
lazy_static = "1.4.0"

druid = { git = "https://github.com/linebender/druid.git", rev = "fc05e965c85fced8720c655685e02478e0530e94" }
druid-widget-nursery = { git = "https://github.com/linebender/druid-widget-nursery" }

#[patch.'https://github.com/linebender/druid'.druid]
#git = "https://github.com/linebender/druid"
#rev = "fc05e965c85fced8720c655685e02478e0530e94"